Prac-3/k8s/sandbox-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  sandbox-deployment
  labels:
    name:  sandbox-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  sandbox
  template:
    metadata:
      labels:
        app:  sandbox
    spec:
      containers:
      - image:  sandbox
        name:  sandbox
        resources:
          limits:
            cpu: "500m"
            memory: "255M"
          requests:
            cpu: "250m"
            memory: "125M"
        livenessProbe:
          httpGet:
            path: /api/sandbox/healthz
            port: 3000
          initialDelaySeconds: 90
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/sandbox/healthz
            port: 3000
          initialDelaySeconds: 30
          timeoutSeconds: 10   
        ports:
        - containerPort:  3000
          name:  'http'
