Prac-3/k8s/ingress.yml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emberr-ingress
  namespace: ember
spec:
  rules:
  - http:
      paths:
      - path: /api/sandbox
        pathType: Prefix
        backend:
          service:
            name: sandbox-service
            port:
              number: 80
